# MLOPS-Dagster-Example

./: README.md  TimeGAN_model.ipynb  compose.yaml  pyproject.toml  vertex-challenge-lab-v1.0.0 (2).ipynb
docker/: Dockerfile_code  Dockerfile_dagster  dagster.yaml  workspace.yaml
sensor_data_mlops/: README.md  definitions.py
sensor_data_mlops/defs/: assets.py  constants.py  filestorebucket.py  jobs.py  model.py  resources.py  sensors.py  utils.py
terraform/: main.tf  variables.tf
timegan/: TimeGAN_model.ipynb
