# This file contains project dependencies

[project]
name = "sensor_data_mlops"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.11.0",
    "dagster-webserver",
    "dagster-duckdb",
    "dagster-postgres",
    "mlflow",
    "tensorflow",
    "transformers",
    "datasets",
    "scikit-learn",
    "scipy",
    "pandas",
    "fsspec",
    "pydrive2",
    "appdirs",
    "funcy",
    "tqdm"
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli[local]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "sensor_data_mlops"
registry_modules = [
    "sensor_data_mlops.components.*",
]




